--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -1,9 +1,9 @@
-.navbar {
+.navbarHeader {
   height: 100px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  a {
+  a,h1 {
     position: relative;
     display: inline-block;
     padding: 15px 30px;
@@ -18,6 +18,7 @@
   a:hover {
     color: #255784;
     background: #2196f3;
+    border-radius: 10px;
     box-shadow: 0 0 10px #2196f3, 0 0 40px #2196f3, 0 0 80px #2196f3;
   }
   a span {
